# myTCG

./: .gitignore  README.md  convert_webp.py  main.py  pdf_export.py  pyproject.toml  test.py
decklists/: echoes_of_the_storm.csv  flow_of_the_currents.csv  raging_fires.csv  repeated_onslaught.csv  swarming_nature.csv  unstoppable_growth.csv
mobile-apk/: capacitor.config.json  package-lock.json  package.json
rules/: rules.aux  rules.tex
scripts/: export_policy.py  generate_icons.py  sync_mobile.py
src/: arrange_grid.py  box_generator.py  card_generator.py  card_text_layout.py  comfyui_generator.py  pdf_export.py  svg_generator.py  svg_utils.py  utils.py
stats/: _move_smoke.csv  ai_training_elo_distributed.csv  arena_calib_neural_minimax.json  arena_calib_neural_search.json  arena_calib_random_minimax.json  arena_calib_random_neural.json  arena_calib_random_search.json  arena_calib_search_minimax.json  arena_calib_search_minimax4.json  arena_four_decks_balanced.json  arena_results.json  arena_results_search.json  arena_six_decks.json  arena_six_decks_v2.json  balance_search.json  effects_smoke.csv  effects_smoke.html  matchup_stats.json
tables/: all_cards.csv  cards_to_print.csv  creatures.csv  decklists.csv  equipment.csv  heroes.csv  leftover.csv  locations.csv  new_effect_ideas.csv  rule_variants.csv  subtypes.txt
tests/: engine_utils.py  test_ai.py  test_card_effects.py  test_lan.py  test_mobile_lan.py  test_mobile_sync.py  test_odin_deck.py  test_osiris_deck.py  test_playout_invariants.py  test_round_transitions.py
workflows/: flux_klein.json  (+1 more)
(+152 files in other folders)
