[project]
name = "mytcg"
version = "0.1.0"
description = "Tools to generate card art, SVGs, and exports for MyTCG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "matplotlib>=3.10.0",
  "ollama>=0.6.0",
  "pandas>=2.3.0",
  "pillow>=11.0.0",
  "pydantic>=2.11.0",
  "svgwrite>=1.4.3",
  "uvicorn>=0.35.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]
ai = [
  "open_spiel>=1.5",
  "torch>=2.4.0",
  "tqdm>=4.66.0",
]
